2014-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/tests/attributes.cpp: Add a simple test for
	Image::formatExpression().

	* Magick++/lib/Image.cpp (formatExpression): Handle case where
	TranslateText() returns NULL.  Problem was reported by Dirk
	Lemstra..

2014-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (formatExpression): New method to format
	a string based on a format similar to command-line -format.
	Feature was requested by Dirk Lemstra.

	* magick/blob.c (BlobReserveSize): Don't throw an exception if
	posix_fallocate() fails since it seems that it is not supported
	for all filesystem types, and is only intended for optimization.

	* Magick++/lib/Image.cpp (resolutionUnits): Return resolution
	units from Image if available, else return the value from
	ImageInfo.  Issue was reported by Dirk Lemstra.

2014-10-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (ReadPNMImage): Validate PGM, PPM, and PAM header
	MaxValue parameter.  Issue was reported by Hanno Böck.

	* coders/pcx.c (ReadPCXImage): Fix for CVE-2014-8355, eliminate
	memory leaks in error paths, and add PCX header logging.  Issue
	was reported by Hanno Böck.

2014-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/wand_symbols.h (MagickSetImageGamma): Fix typo in
	wand/wand_symbols.h.  Resolves SF bug #277.

2014-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (TIFFIgnoreTags): Avoid warning about unused
	strtol() return value on Linux.

	* magick/random-private.h ("C"): Move random inlined
	implementation bits to random-private.h, which is not installed,
	or used outside of the core C library.

2014-09-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/annotate.c (AnnotateImage): An empty text string should
	not be treated as an error.  Resolves Debian bug 759956.

2014-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
