@@ -1,3 +1,9 @@
+2014-11-04  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
+
+	* coders/png.c: Use png_get_libpng_ver() instead of
+	PNG_LIBPNG_VER_STRING in calls to *create_struct*() to avoid
+	problems when later running with an updated libpng version.
+
 2014-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Magick++/tests/attributes.cpp: Add a simple test for
